# sdl-app

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/app/: app_state.cpp  app_state.h
src/counter/: Counter.cpp  Counter.h  ICounterListener.h
tests/: test_counter.cpp
